--- a/web/src/app.html
+++ b/web/src/app.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" style="width: 100%; height: 100%; margin: 0" data-theme="dark">
+<html style="height: 100%" lang="en" class="dark">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/pico.min.css" />
-
+		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body>
-		<body data-sveltekit-preload-data="hover" style="width: 100%; height: 100%; margin: 0">
-			<div style="display: contents; width: 100%; height: 100%; margin: 0">%sveltekit.body%</div>
-		</body>
+	<body data-sveltekit-preload-data="hover" data-theme="seafoam">
+		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 	</body>
 </html>
