--- a/web/src/app.html
+++ b/web/src/app.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html style="height: 100%" lang="en" class="dark">
+<html style="min-height: 100%" lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="seafoam">
-		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
+		<div style="display: contents" class="h-full overflow-hidden text-token bg-surface-500">
+			%sveltekit.body%
+		</div>
 	</body>
 </html>
