--- a/web/src/app.html
+++ b/web/src/app.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html style="min-height: 100%" lang="en" class="dark">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<script>
+			try {
+				document.documentElement.setAttribute('data-theme', localStorage.getItem('theme'));
+			} catch (e) {}
+		</script>
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
-		<div style="display: contents" class="h-full overflow-hidden text-token bg-surface-500">
-			%sveltekit.body%
-		</div>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
