--- a/web/src/app.html
+++ b/web/src/app.html
@@ -17,8 +17,10 @@
 				document.documentElement.setAttribute('data-theme', localStorage.getItem('theme'));
 			} catch (e) {}
 		</script>
+		
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<!-- --w3m-modal-z-index overrids the low z-index of wallet connect modal (89) -->
+	<body data-sveltekit-preload-data="hover" style="--w3m-modal-z-index: 1001;">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
